--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -2,15 +2,54 @@
 /* ***Responsive media query*** */
 
 /* Extra large devices (large desktops, 1200px and up) */
-@media (min-width: 1200px) and (max-width:1500px){ 
-    
+@media (min-width: 992px) and (max-width:1199px){ 
+    a.navbar-brand img {
+        max-width: 170px;
+    }
+    a.nav-link {
+        padding: 0px 20px !important;
+    }
+    h1 {
+        font-size: 60px;
+     
+    }
+    a.custom-btn.black {
+        padding: 20px 20px;
+    }
+    .cta-button-group {
+        gap: 15px;
+    }
+    .service-card-body {
+        padding: 40px 32px;
+    }
+    .pops-text {
+        padding: 32px 32px;
+        
+    }
+    .pops-button-group .custom-btn {
+        padding-left: 8px;
+        padding-right: 8px;
+    }
+    .pops-text h2 {
+        padding-bottom: 8px;
+        font-size: 26px;
+    }
+    div#myTabContent {
+        width: 100%;
+        padding-left: 50px;
+    }
+    .contact-form-left {
+ 
+        padding: 32px;
+      
+    }
 }
 
 /* Large devices (desktops, 992px and up) */
 @media (max-width: 991px){ 
     div#navbarSupportedContent {
         position: absolute;
-        top: 75px;
+        top: 69px;
         background: #fff;
         left: 0;
         padding-right: 15px;
@@ -22,7 +61,16 @@
         padding-bottom: 20px;
     }
     
-    header {
+    .others-page img.white-logo {
+        display: none;
+    }
+    
+    .others-page img.black-logo {
+        display: block;
+    }
+    
+    .others-page button.navbar-toggler i {
+        color: #78ca5b;
     }
     
     a.nav-link {
@@ -74,6 +122,117 @@
         height: auto;
         overflow: visible;
     }
+    h1 {
+        font-size: 40px;
+        line-height: 1.3;
+    }
+    .banner-area {
+        padding-top: 130px;
+        padding-bottom: 80px;
+    }
+    h2 {
+        font-size: 30px;
+    }
+    .cta-button-group {
+        flex-direction: column;
+        text-align: left;
+        align-items: self-start;
+    }
+    
+    .cta-right {
+        padding-bottom: 0px;
+    }
+    .pops-text {
+        border-radius: 0px;
+        padding: 32px 40px;
+    }
+    
+    .pops-text h2 {
+        font-size: 30px;
+    }
+    .pops-text {
+        border-radius: 0px;
+        padding: 32px 40px;
+    }
+    
+    .pops-text h2 {
+        font-size: 30px;
+    }
+    
+    .tab-left h2 br {
+        display: none;
+    }
+    
+    .tab-left {
+        padding-bottom: 50px;
+    }
+    
+    .tab-left h2 {
+        padding-bottom: 20px;
+    }
+    
+    div#myTabContent {
+        padding-left: 50px;
+    }
+    
+    .contact-form-left {
+        border-radius: 0px;
+        padding: 40px 32px;
+    }
+    
+    .contact-form {
+        border-radius: 0px;
+    }
+    
+    .blog-card {
+        margin-bottom: 32px;
+    }
+    
+    .footer-inner {
+        text-align: center;
+    }
+    
+    .footer-inner {
+        padding-bottom: 40px;
+    }
+    
+    a.get-direction {
+        justify-content: center;
+    }
+    
+    .quick-contact a {
+        justify-content: center;
+    }
+    
+    .footer-inner h4 {
+        margin-bottom: 24px;
+    }
+    
+    ul.social-link {
+        justify-content: center;
+    }
+    
+    .copyright-wrap {
+        flex-direction: column-reverse;
+        padding-top: 50px;
+    }
+    
+    .copyright-logo {
+        display: none;
+    }
+    
+    .copyright-text {
+        padding-top: 24px;
+        text-align: center;
+    }
+    
+    .copyright-text ul {
+        justify-content: center;
+    }
+    
+    img.black-logo {
+        display: none;
+    }
 }
 
 /* Medium devices (tablets, 768px and up) */
@@ -84,7 +243,109 @@
 
 /* Extra small devices (portrait phones, less than 768px) */
 @media (max-width: 767.98px) { 
- 
+    .service-card-body {
+        padding: 32px;
+    }
+    .pops-text h2 {
+        font-size: 24px;
+    }
+    .pops-button-group {
+        flex-direction: column;
+        align-items: self-start;
+    }
+    
+    .pops-text {
+        padding: 32px 24px;
+    }
+    
+    section.pops-area {
+        padding-top: 50px;
+    }
+    
+    section.tab-area {
+        padding-top: 200px;
+    }
+    
+    .tabs-inner {
+        flex-direction: column;
+    }
+    
+    .nav-tabs {
+        max-width: 100%;
+    }
+    
+    div#myTabContent {
+        padding: 0px;
+        padding-top: 50px;
+    }
+    
+    section.contact-form-area {
+        padding: 50px 0px;
+    }
+    
+    .contact-form {
+        padding-left: 24px;
+        padding-right: 24px;
+        padding-bottom: 24px;
+    }
+    
+    .form-inner {
+        padding: 32px;
+    }
+    
+    section.blog-area {
+        padding-top: 50px;
+        padding-bottom: 50px;
+    }
+    
+    .section-title {
+        padding-bottom: 24px;
+    }
+    
+    .blog-body {
+        padding: 32px;
+    }
+    
+    .blog-badge {
+        left: 32px;
+    }
+    
+    .blog-card-header img {
+        padding-right: 32px;
+    }
+    
+    .blog-card-header-info {
+        padding: 32px;
+    }
+    
+    .blog-button {
+        padding-top: 8px;
+    }
+    
+    footer {
+        padding-top: 50px;
+    }
+    
+
+    .banner-button-group {
+        flex-direction: column;
+        align-items: self-start;
+    }
+    
+    .banner-text p {
+        font-size: 16px;
+    }
+    
+    section.cta-area {
+        padding-top: 50px;
+        padding-bottom: 20px;
+    }
+    .others-page {
+        padding-top: 110px;
+    }
+    .sidebar {
+        margin-top: 24px;
+    }
 }
 
 /* Small devices (landscape phones, 576px and up) */
@@ -93,5 +354,11 @@
 }
 /* Small devices (landscape phones, 576px and up) */
 @media (min-width: 320px) and (max-width: 575.98px) { 
- 
+    h1 {
+        font-size: 35px;
+        line-height: 1.3;
+    }
+    a.navbar-brand img {
+        max-width: 190px;
+    }
 }
